k8s/overlays/gke/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: d2s-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "d2s-static-ip"
    networking.gke.io/managed-certificates: "d2s-cert-v2"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: DEPLOY_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront
                port:
                  number: 80
